@@ -3,8 +3,12 @@ package com.example.order_service.service;
 import com.example.order_service.exception.*;
 import com.example.order_service.dto.*;
 import com.example.order_service.feign.ProductClient;
+import com.example.order_service.feign.VariantClient;
+import com.example.order_service.model.AddonItem;
+import com.example.order_service.model.Customer;
 import com.example.order_service.model.Order;
 import com.example.order_service.model.OrderItem;
+import com.example.order_service.repository.CustomerRepository;
 import com.example.order_service.repository.OrderRepository;
 import feign.FeignException;
 import org.springframework.data.domain.Page;
@@ -23,74 +27,169 @@ import java.util.stream.Collectors;
 public class OrderService {
 
     private final OrderRepository orderRepository;
+    private final CustomerRepository customerRepository;
     private final ProductClient productClient;
+    private final VariantClient variantClient;
 
-    public OrderService(OrderRepository orderRepository, ProductClient productClient) {
+    public OrderService(OrderRepository orderRepository, CustomerRepository customerRepository, ProductClient productClient, VariantClient variantClient) {
         this.orderRepository = orderRepository;
+        this.customerRepository = customerRepository;
         this.productClient = productClient;
+        this.variantClient = variantClient;
     }
 
     public ResponseEntity<ApiResponse<OrderResponse>> createOrder(CreateOrderRequest createOrderRequest) {
 
+        Optional<Customer> customerOpt = customerRepository.findById(createOrderRequest.getCustomerId());
+        if (customerOpt.isEmpty()) {
+            throw new CustomerNotFoundException(createOrderRequest.getCustomerId());
+        }
+        Customer customer = customerOpt.get();
 
         List<OrderItem> orderItems = new ArrayList<>();
         double totalAmount = 0;
 
         for (OrderItemsRequest orderItemsRequest : createOrderRequest.getItems()){
 
-            ProductResponseDTO product;
+            VariantResponseDTO variant;
 
             try {
+                ApiResponse<VariantResponseDTO> variantResponse = variantClient.getVariantById(orderItemsRequest.getVariantId());
+                variant = variantResponse.getData();
 
-                ApiResponse<ProductResponseDTO> response = productClient.getProductById(orderItemsRequest.getProductId());
-                product = response.getData();
-
-                if (product == null) {
-                    throw new ProductNotFoundException(orderItemsRequest.getProductId());
+                if (variant == null) {
+                    throw new VariantNotFoundException(orderItemsRequest.getVariantId());
                 }
-
-
-                if (product.getQuantity() < orderItemsRequest.getQuantity()) {
-                    throw new InsufficentStockException(orderItemsRequest.getProductId());
-                }
-
-            productClient.updateStock(product.getId(), orderItemsRequest.getQuantity());
-
-            } catch (FeignException.NotFound e){
-                throw new ProductNotFoundException(orderItemsRequest.getProductId());
+            } catch (FeignException.NotFound e) {
+                throw new VariantNotFoundException(orderItemsRequest.getVariantId());
             }
 
-            double totalPrice = product.getPrice() * orderItemsRequest.getQuantity();
+            ProductResponseDTO product;
+            try {
+                ApiResponse<ProductResponseDTO> productResponse = productClient.getProductById(variant.getProductId());
+                product = productResponse.getData();
 
-            OrderItem orderItem = new OrderItem(product.getId(),
-                                                product.getName(),
-                                                orderItemsRequest.getQuantity(),
-                                                product.getPrice(),
-                                                product.getCategory(),
-                                                totalPrice);
+                if (product == null) {
+                    throw new ProductNotFoundException(variant.getProductId());
+                }
+            } catch (FeignException.NotFound e) {
+                throw new ProductNotFoundException(variant.getProductId());
+            }
+
+            if (variant.getQuantity() < orderItemsRequest.getQuantity()) {
+                throw new InsufficentStockException(variant.getVariantId());
+            }
+
+            variantClient.updateStock(variant.getVariantId(), orderItemsRequest.getQuantity());
+
+            double mainTotalPrice = variant.getPrice() * orderItemsRequest.getQuantity();
+            double addonPrice = 0;
+
+            List<AddonItem> addonItems = new ArrayList<>();
+            if (orderItemsRequest.getAddons() != null){
+
+                for (AddonRequest addonReq : orderItemsRequest.getAddons()){
+
+                    if (addonReq.getVariantId() == null || addonReq.getVariantId().isBlank()) continue;
+
+                    VariantResponseDTO addonVariant;
+                    try{
+                        ApiResponse<VariantResponseDTO> addonVariantResp =  variantClient.getVariantById(addonReq.getVariantId());
+                        addonVariant = addonVariantResp.getData();
+
+                        if (addonVariant == null) {
+                            throw new VariantNotFoundException(addonReq.getVariantId());
+                        }
+                    } catch (FeignException.NotFound e) {
+                        throw new VariantNotFoundException(addonReq.getVariantId());
+                    }
+
+                    ProductResponseDTO addonProduct;
+
+                    try{
+                        ApiResponse<ProductResponseDTO> addonProductResp = productClient.getProductById(addonVariant.getProductId());
+                        addonProduct = addonProductResp.getData();
+
+                        if (addonProduct == null) {
+                            throw new ProductNotFoundException(addonVariant.getProductId());
+                        }
+
+                    } catch (FeignException.NotFound e){
+                        throw new ProductNotFoundException(addonVariant.getProductId());
+                    }
+
+                    if (addonVariant.getQuantity() < 1) {
+                        throw new InsufficentStockException(addonVariant.getVariantId());
+                    }
+
+                    variantClient.updateStock(addonVariant.getVariantId(), 1);
+
+                    AddonItem addonItem = new AddonItem();
+
+                    addonItem.setAddonProductId(addonProduct.getId());
+                    addonItem.setAddonVariantId(addonVariant.getVariantId());
+                    addonItem.setAddonName(addonProduct.getName());
+                    addonItem.setAttributes(addonVariant.getAttributes());
+                    addonItem.setPrice(addonVariant.getPrice());
+
+                    addonItems.add(addonItem);
+
+                    addonPrice += addonItem.getPrice();
+                }
+            }
+
+            OrderItem orderItem = new OrderItem(
+                    product.getId(),
+                    variant.getVariantId(),
+                    product.getName(),
+                    product.getCategory(),
+                    variant.getAttributes(),
+                    orderItemsRequest.getQuantity(),
+                    variant.getPrice(),
+                    mainTotalPrice,
+                    addonItems
+            );
 
             orderItems.add(orderItem);
-            totalAmount += totalPrice;
+            totalAmount += mainTotalPrice + addonPrice;
         }
 
-        Order order = new Order(createOrderRequest.getCustomerName(),
+        Order order = new Order(createOrderRequest.getCustomerId(),
+                                customer.getName(),
                                 orderItems,
                                 totalAmount);
 
         Order savedOrder = orderRepository.save(order);
 
         List<OrderItemResponseDTO> orderItemResponseDTOs = savedOrder.getItems().stream()
-                                                            .map(item -> new OrderItemResponseDTO(
-                                                                    item.getProductId(),
-                                                                    item.getProductName(),
-                                                                    item.getQty(),
-                                                                    item.getPrice(),
-                                                                    item.getCategory(),
-                                                                    item.getTotalPrice())
-                                                              ).collect(Collectors.toList());
+                                                            .map(item -> {
+
+                                                                List<AddonItemsResponseDTO> addonResponses = item.getAddonItems().stream()
+                                                                        .map(addon -> {
+                                                                            AddonItemsResponseDTO dto = new AddonItemsResponseDTO();
+                                                                            dto.setAddonProductId(addon.getAddonProductId());
+                                                                            dto.setAddonVariantId(addon.getAddonVariantId());
+                                                                            dto.setAddonName(addon.getAddonName());
+                                                                            dto.setAttributes(addon.getAttributes());
+                                                                            dto.setPrice(addon.getPrice());
+                                                                            return dto;
+                                                                        }).toList();
+
+                                                                OrderItemResponseDTO dto = new OrderItemResponseDTO();
+                                                                dto.setProductId(item.getProductId());
+                                                                dto.setVariantId(item.getVariantId());
+                                                                dto.setProductName(item.getProductName());
+                                                                dto.setCategory(item.getCategory());
+                                                                dto.setAttributes(item.getAttributes());
+                                                                dto.setQty(item.getQty());
+                                                                dto.setPrice(item.getPrice());
+                                                                dto.setTotalPrice(item.getTotalPrice());
+                                                                dto.setAddons(addonResponses);
+                                                                return dto;
+                                                                    }).toList();
 
         OrderResponse orderResponse = new OrderResponse(savedOrder.getId(),
-                                                        savedOrder.getCustomerName(),
+                                                        customer.getName(),
                                                         orderItemResponseDTOs,
                                                         savedOrder.getTotalAmount());
 
@@ -112,15 +211,30 @@ public class OrderService {
         Order order = orderOpt.get();
 
         List<OrderItemResponseDTO> orderItems = order.getItems().stream()
-                .map(orderItem -> new OrderItemResponseDTO(
-                                orderItem.getProductId(),
-                                orderItem.getProductName(),
-                                orderItem.getQty(),
-                                orderItem.getPrice(),
-                                orderItem.getCategory(),
-                                orderItem.getTotalPrice()
-                                ))
-                                .collect(Collectors.toList());
+                .map(item -> {
+                    List<AddonItemsResponseDTO> addonItemsResponses = item.getAddonItems().stream()
+                            .map(addon -> {
+                                AddonItemsResponseDTO dto = new AddonItemsResponseDTO();
+                                dto.setAddonProductId(addon.getAddonProductId());
+                                dto.setAddonVariantId(addon.getAddonVariantId());
+                                dto.setAddonName(addon.getAddonName());
+                                dto.setAttributes(addon.getAttributes());
+                                dto.setPrice(addon.getPrice());
+                                return dto;
+                            }).toList();
+
+                    OrderItemResponseDTO dto = new OrderItemResponseDTO();
+                    dto.setProductId(item.getProductId());
+                    dto.setVariantId(item.getVariantId());
+                    dto.setProductName(item.getProductName());
+                    dto.setCategory(item.getCategory());
+                    dto.setAttributes(item.getAttributes());
+                    dto.setQty(item.getQty());
+                    dto.setPrice(item.getPrice());
+                    dto.setTotalPrice(item.getTotalPrice());
+                    dto.setAddons(addonItemsResponses);
+                    return dto;
+                }).toList();
 
 
         OrderResponse orderResponse = new OrderResponse(order.getId(),
@@ -142,19 +256,36 @@ public class OrderService {
         Page<Order> orders = orderRepository.findAll(pageable);
 
         if (orders.isEmpty()){
-            throw new OrdersNotFoundException("No Orders");
+            throw new OrdersNotFoundException(ErrorMessage.NO_ORDERS);
         }
 
        Page<OrderResponse> orderResponses = orders.map(order ->{
                List<OrderItemResponseDTO> orderItems = order.getItems().stream()
-                       .map(orderItem ->
-                       new OrderItemResponseDTO(orderItem.getProductId(),
-                                                   orderItem.getProductName(),
-                                                   orderItem.getQty(),
-                                                   orderItem.getPrice(),
-                                                   orderItem.getCategory(),
-                                                   orderItem.getTotalPrice()))
-                                                    .collect(Collectors.toList());
+                       .map(item ->{
+
+                           List<AddonItemsResponseDTO> addonItemsResponses = item.getAddonItems().stream()
+                                   .map(addon -> {
+                                       AddonItemsResponseDTO dto = new AddonItemsResponseDTO();
+                                       dto.setAddonProductId(addon.getAddonProductId());
+                                       dto.setAddonVariantId(addon.getAddonVariantId());
+                                       dto.setAddonName(addon.getAddonName());
+                                       dto.setAttributes(addon.getAttributes());
+                                       dto.setPrice(addon.getPrice());
+                                       return dto;
+                                   }).toList();
+
+                           OrderItemResponseDTO dto = new OrderItemResponseDTO();
+                           dto.setProductId(item.getProductId());
+                           dto.setVariantId(item.getVariantId());
+                           dto.setProductName(item.getProductName());
+                           dto.setCategory(item.getCategory());
+                           dto.setAttributes(item.getAttributes());
+                           dto.setQty(item.getQty());
+                           dto.setPrice(item.getPrice());
+                           dto.setTotalPrice(item.getTotalPrice());
+                           dto.setAddons(addonItemsResponses);
+                           return dto;
+                       }).toList();
 
                return new OrderResponse(order.getId(),
                        order.getCustomerName(),
